# jarvis-code

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-28-build-skill-eval.md  2026-06-28-jarvis-code-v1.md
docs/superpowers/specs/: 2026-06-28-build-skill-eval-design.md  2026-06-28-eval-loop-design.md  2026-06-28-jarvis-code-design.md
evals/: run.py
jarvis/: commands.py  config.py  history.py  main.py  persona.py  query.py  upgrade.py
jarvis/skills/: btw.py
jarvis/tools/: __init__.py  bash.py  read.py  write.py
tests/: test_commands.py  test_config.py  test_evals.py  test_history.py  test_main.py  test_query.py  test_upgrade.py
tests/skills/: test_btw.py
tests/tools/: test_bash.py  test_file_tools.py
