[project]
name = "jarvis-code"
version = "0.1.0"
description = "Jarvis Code — personal AI coding assistant CLI"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
]

[project.scripts]
jarvis = "jarvis.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
